@@ -1,5 +1,16 @@
 2000-02-19  Ettore Perazzoli  <ettore@helixcode.com>
 
+	* htmltextmaster.c (merge): New function, implementation of
+	`HTMLText::merge'.
+
+	* htmltext.c (merge): New function, default (non) implementation
+	of `HTMLText::merge()'.
+	(html_text_class_init): Install it.
+
+	* htmltext.h: New virtual method `HTMLText::merge'.
+
+	* htmlengine.h: New member `insertion_font_style'.
+
 	* htmlengine-edit-styles.c: Renamed to `htmlengine-edit-styles.c'.
 	* htmlengine-edit-styles.h: Renamed to `htmlengine-edit-styles.h'.
 
